[fix]難しかったこと、学んだこと追加

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
 
 .section:first-letter {
   font-size: 2em;
-  color: #7172ac;
+  color: #383bfa;
 }
 
 .section-box{
@@ -131,7 +131,6 @@ body {
 }
 
 /* ********************************** */
-
 
 
 /* footer */
