aboutの画像追加

--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,8 @@ body {
   font-weight: bold;
   font-size: 30px;
 }
-
-/* ********************************** */
-
-
-/* footer */
+.about-image{
+  height: 100px;
+}
 
 
