[add]特に頑張ったことについて強調した

--- a/css/style.css
+++ b/css/style.css
@@ -202,5 +202,8 @@ body {
     position: absolute;
     bottom: -20px;
     right: 20px;
-  color: #666;
+    color: #666;
+}
+span{
+  background-color:#bce0fb; 
 }
