--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ body {
   text-decoration: none;
   font-size:0.6rem;
     /*背景画像の指定*/
-    background: url("/Users/ayano/portfolio/image/topback.png") no-repeat center;
+    background: url("../image/topback.png") no-repeat center;
   background-size: contain;
 }
 
